--- a/scripts/plotting/README
+++ b/scripts/plotting/README
@@ -1,1 +1,1 @@
-Scripts in this directory are intended to be run on my laptop, as writte. To run on the cluster, may need to import certain packages and modify filepaths.
+Scripts in this directory are intended to be run on my laptop, as written. To run on the cluster, may need to import certain packages and modify filepaths.
